--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  background-color:white;
+  background: rgb(240,237,239);
+background: linear-gradient(90deg, rgba(240,237,239,1) 17%, rgba(200,195,196,1) 52%, rgba(251,251,251,1) 89%);
 }
 
 #logo{
