--- a/blog.css
+++ b/blog.css
@@ -1,37 +1,39 @@
-li{
-  list-style-type: none;
+body {
+  margin: 0;
+  background-color:white;
 }
 
-a{
-  text-decoration: none;
-  color: #212529;
-  padding: 2vw;
-  font-family: monospace;
-  font-family: 'Nunito', sans-serif;
-
+#logo{
+  width: 100%;
+  height: 9vh;
+  background-color: #343A40;
 }
-.nav-bar{
-  width: 100%;  
-  height: 110px; 
-  background-color:#CED4DA ;
+
+.cs{
+  color: #DEE2E6;
   font-family: 'Alex Brush', cursive;
-  font-size: larger;
+  font-size: 75px;
+  text-decoration: none;
+  text-align: center;
 }
 
 
-.name{
-  margin-left: 85vh;
-}
-
-
-ul{
-  margin: 0;
-  padding: 0;
+nav{
   display: flex;
-  margin: 0 20vw;
+  width: 50%;
+  padding-left: 15em;
   font-size: 3vh;
+  color: black;
+  font-family: monospace;
+  justify-content: space-evenly;
+  font-family: 'Nunito', sans-serif;
+  
 }
 
-body{
-  margin: 0;
+a:hover{
+  background-color: #E9ECEF;
+}
+
+a:visited {
+  color: black;
 }
