--- a/blog.css
+++ b/blog.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  background-color:white;
+  background: rgb(240,237,239);
+background: linear-gradient(90deg, rgba(240,237,239,1) 17%, rgba(200,195,196,1) 52%, rgba(251,251,251,1) 89%);
 }
 
 #logo{
@@ -36,4 +37,41 @@ a:hover{
 
 a:visited {
   color: black;
+}
+
+
+aside {
+  width: 40%;
+  padding-left: .5rem;
+  margin-left: .5rem;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #29627e;
+  font-style: italic;
+  color: #29627e;
+}
+
+aside > p {
+  margin: .5rem;
+}
+
+p {
+  font-family: 'Nunito', sans-serif;
+}
+
+.blog{
+  text-align: left;
+  
+}
+
+.title{
+  text-align: center;
+  font-family: 'Alex Brush', cursive;
+  font-size: 50px;
+text-decoration: overline;
+}
+
+.title2{
+  text-align: center;
+  font-family: 'Nunito', sans-serif;
+text-decoration: underline;
 }
